[package]
name = "pomo"
version = "1.0.5"
authors = ["Kota Yoshitsugu <yoshitsugu@users.noreply.github.com>"]
license = "MIT"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
regex = "*"
getopts = "0.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
redis = "0.5.3"